// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by exact postcode 1`] = `
[
  {
    "lat": 51.547915089,
    "lng": -0.00743124,
    "postcode": "E20 1AA",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard 1`] = `
[
  {
    "lat": 51.547915089,
    "lng": -0.00743124,
    "postcode": "E20 1AA",
  },
  {
    "lat": 51.548136,
    "lng": -0.007724,
    "postcode": "E20 1AB",
  },
  {
    "lat": 51.54796467,
    "lng": -0.007587,
    "postcode": "E20 1AD",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard: 2nd page 1`] = `
[
  {
    "lat": 51.546844,
    "lng": -0.006872,
    "postcode": "E20 1AE",
  },
  {
    "lat": 51.547427816,
    "lng": -0.006803491,
    "postcode": "E20 1AF",
  },
  {
    "lat": 51.546690968,
    "lng": -0.006835695,
    "postcode": "E20 1AG",
  },
]
`;
